--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
     version: 2.2.2
   environment:
     SPEC_OPTS: "--format documentation --color --format RspecJunitFormatter --out $CIRCLE_TEST_REPORTS/rspec/rspec.xml"
-    DOCKER_REPO: quay.io/ngs_/docker-rails-example
+    DOCKER_REPO: quay.io/atsnngs/docker-rails-example
   pre:
     - "echo 'Host *' >> $HOME/.ssh/config"
     - "echo 'ForwardAgent yes' >> $HOME/.ssh/config"
@@ -20,33 +20,35 @@ dependencies:
     - ~/docker
   pre:
     - docker info
-    - if [[ -e ~/docker/web.tar ]]; then docker load --input ~/docker/web.tar; fi
-    - if [[ -e ~/docker/job.tar ]]; then docker load --input ~/docker/job.tar; fi
-    - docker pull $DOCKER_REPO:web
-    - docker pull $DOCKER_REPO:job
-    - mkdir -p ~/docker && docker save $DOCKER_REPO:web > ~/docker/web.tar
-    - mkdir -p ~/docker && docker save $DOCKER_REPO:job > ~/docker/job.tar
+    - if [[ -e ~/docker/web.tar ]]; then docker load --input ~/docker/web.tar; fi; echo ''
+    - if [[ -e ~/docker/job.tar ]]; then docker load --input ~/docker/job.tar; fi; echo ''
+    - docker pull ubuntu:14.04
+    - docker pull -a $DOCKER_REPO
+    - mkdir -p ~/docker && docker save "${DOCKER_REPO}:web" > ~/docker/web.tar; echo ''
+    - mkdir -p ~/docker && docker save "${DOCKER_REPO}:job" > ~/docker/job.tar; echo ''
 checkout:
   post:
     - chmod 400 docker/files/ssh/id_rsa.serverspec
 test:
   pre:
-    - docker build -f docker/Dockerfile-web -t $DOCKER_REPO:web docker
-    - docker build -f docker/Dockerfile-job -t $DOCKER_REPO:job docker
+    - docker build -f docker/Dockerfile-web -t "${DOCKER_REPO}:web" docker
+    - docker build -f docker/Dockerfile-job -t "${DOCKER_REPO}:job" docker
   override:
-    - 'bin/rake test'
+    - bin/rake test
+    - docker run -w /var/serverspec -t quay.io/atsnngs/docker-rails-example:web bundle exec rake spec
+    - docker run -w /var/serverspec -t quay.io/atsnngs/docker-rails-example:job bundle exec rake spec
 deployment:
   master:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $DOCKER_REPO_HOST
-      - docker push $DOCKER_REPO:web
-      - docker push $DOCKER_REPO:job
+      - docker push "${DOCKER_REPO}:web"
+      - docker push "${DOCKER_REPO}:job"
   stages:
     branch: /deployment\/.*/
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $DOCKER_REPO_HOST
-      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker tag $DOCKER_REPO:web $DOCKER_REPO:web-$ENV_NAME
-      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker tag $DOCKER_REPO:job $DOCKER_REPO:job-$ENV_NAME
-      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker push $DOCKER_REPO:web-$ENV_NAME
-      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker push $DOCKER_REPO:job-$ENV_NAME
+      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker tag "${DOCKER_REPO}:web" "${DOCKER_REPO}:web-$ENV_NAME"
+      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker tag "${DOCKER_REPO}:job" "${DOCKER_REPO}:job-$ENV_NAME"
+      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker push "${DOCKER_REPO}:web-$ENV_NAME"
+      - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && docker push "${DOCKER_REPO}:job-$ENV_NAME"
