Push images for each builds

--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ dependencies:
   override:
     - sudo pip install awscli
     - bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
+    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $DOCKER_REPO_HOST
     - docker info
     - docker pull ubuntu:14.04
     - docker pull redis
@@ -36,20 +37,22 @@ dependencies:
     - DATABASE_URL=mysql2://root:dev@dev-mysql/docker-rails-example ROLE=job ./script/build-docker.sh
     - docker run --name serverspec-bundle-install -v "$(pwd)/docker/serverspec"\:/mnt/serverspec -w /mnt/serverspec -t "${DOCKER_REPO}:job" bundle install --path=vendor/bundle
 test:
-  pre:
   override:
     - bin/rake test
     - TARGET="${DOCKER_REPO}:web" script/run-server-spec.sh
     - TARGET="${DOCKER_REPO}:job" script/run-server-spec.sh
+  post:
+    - docker tag "${DOCKER_REPO}:web" "${DOCKER_REPO}:web-b${CIRCLE_BUILD_NUM}"
+    - docker tag "${DOCKER_REPO}:job" "${DOCKER_REPO}:job-b${CIRCLE_BUILD_NUM}"
+    - docker push "${DOCKER_REPO}:web-b${CIRCLE_BUILD_NUM}"
+    - docker push "${DOCKER_REPO}:job-b${CIRCLE_BUILD_NUM}"
 deployment:
   master:
     branch: master
     commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $DOCKER_REPO_HOST
       - docker push "${DOCKER_REPO}:web"
       - docker push "${DOCKER_REPO}:job"
   stages:
     branch: /deployment\/.*/
     commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $DOCKER_REPO_HOST
       - export ENV_NAME=`echo $CIRCLE_BRANCH | sed 's/deployment\///'` && /bin/sh script/deploy.sh
