--- a/circle.yml
+++ b/circle.yml
@@ -21,6 +21,7 @@ dependencies:
     - docker/serverspec/vendor/bundle
   override:
     - sudo pip install awscli
+    - sudo apt-get update && sudo apt-get install jq
     - bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS $DOCKER_REPO_HOST
     - docker info
